removed column border + corrected spacing

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,7 +3,7 @@ $new-white: rgb(248, 246, 234);
 $text-margin: 10px;
 
 body {
-    height: 9px;
+    //height: 1200px;
     width: 1980px;
     margin:0;
     //background: rgb(209, 182, 214);
